--- a/package.json
+++ b/package.json
@@ -6,25 +6,36 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/cors": "^2.8.8",
+    "@types/express": "^4.17.9",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "antd": "^4.8.2",
+    "cors": "^2.8.5",
+    "it-length-prefixed": "^3.1.0",
+    "it-pipe": "^1.1.0",
     "libp2p": "^0.29.3",
     "libp2p-mplex": "^0.10.1",
     "libp2p-noise": "^2.0.1",
+    "libp2p-tcp": "^0.15.1",
     "libp2p-webrtc-star": "^0.20.1",
     "libp2p-websockets": "^0.14.0",
+    "multiaddr": "^8.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "wrtc": "^0.4.6"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server/server.js",
+    "dev": "react-scripts start",
+    "server": "nodemon server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
