--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
     "antd": "^4.8.2",
+    "chalk": "^4.1.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "it-length-prefixed": "^3.1.0",
     "it-pipe": "^1.1.0",
     "libp2p": "^0.29.3",
@@ -24,6 +26,7 @@
     "libp2p-webrtc-star": "^0.20.1",
     "libp2p-websockets": "^0.14.0",
     "multiaddr": "^8.1.1",
+    "peer-id": "^0.14.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
