--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "crypto": "^1.0.1",
     "it-length-prefixed": "^3.1.0",
     "it-pipe": "^1.1.0",
+    "jsrsasign": "^10.1.4",
+    "jsrsasign-util": "^1.0.2",
     "libp2p": "^0.29.3",
     "libp2p-mplex": "^0.10.1",
     "libp2p-noise": "^2.0.1",
@@ -26,6 +28,7 @@
     "libp2p-webrtc-star": "^0.20.1",
     "libp2p-websockets": "^0.14.0",
     "multiaddr": "^8.1.1",
+    "node-rsa": "^1.1.1",
     "peer-id": "^0.14.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
