--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "socket.io": "^3.0.3",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
     "wrtc": "^0.4.6"
