--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
-    "antd": "^4.8.2",
+    "antd": "^4.8.5",
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -35,6 +35,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "socket.io": "^3.0.3",
+    "socket.io-client": "^3.0.3",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
     "wrtc": "^0.4.6"
