--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "@types/styled-components": "^5.1.4",
     "antd": "^4.9.0",
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
@@ -32,10 +33,12 @@
     "peer-id": "^0.14.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-draggable": "^4.4.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "socket.io": "^3.0.3",
     "socket.io-client": "^3.0.3",
+    "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
     "wrtc": "^0.4.6"
