--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "@types/simple-peer": "^9.6.1",
     "@types/styled-components": "^5.1.4",
     "antd": "^4.9.0",
     "chalk": "^4.1.0",
@@ -38,6 +39,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "simple-peer": "^9.9.3",
     "socket.io": "^3.0.3",
     "socket.io-client": "^3.0.3",
     "styled-components": "^5.2.1",
